# airbnb-checkout-checker

./: .gitignore  CONTRIBUTING.md  README.md  run.sh  setup.sh
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: routes.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: __init__.py  vision_service.py
backend/tests/: conftest.py  test_api.py
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx
frontend/src/components/: PhotoUpload.tsx
frontend/src/hooks/: api.ts
frontend/src/pages/: HomePage.tsx  PropertyPage.tsx
frontend/src/schemas/: schemas.ts
frontend/src/test/: App.test.tsx
